test/bad/lambdas/lambda01.px

func f(g: Int->String): Int->String def
    return g

f(lambda x: x)
